tests/baselines/reference/symbolProperty32.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty32.ts(2,5): error TS2411: Property '[Symbol.toStringTag]' of type '() => { x: string; }' is not assignable to 'symbol' index type '() => { x: number; }'.


==== tests/cases/conformance/es6/Symbols/symbolProperty32.ts (1 errors) ====
    class C1 {
        [Symbol.toStringTag]() {
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2411: Property '[Symbol.toStringTag]' of type '() => { x: string; }' is not assignable to 'symbol' index type '() => { x: number; }'.
            return { x: "" };
        }
    }
    class C2 extends C1 {
        [s: symbol]: () => { x: number };
    }